--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www",
     "dev": "nodemon --inspect ./bin/www"
   },
+  "engines": {
+    "node": "^8.5.0",
+    "npm": "^5.5.1"
+  },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
